--- a/Task3_4/nginx/conf_d/task.conf
+++ b/Task3_4/nginx/conf_d/task.conf
@@ -39,19 +39,21 @@ server{
     }
 
 
-    location /image1 {
+       location /image1 {
         rewrite ^/image1$ /image1.jpg last;
-        root /var/www/task3/image1/;
-    }
+        location ~* \.jpg$ {
+                image_filter rotate 180;
+        }
 
-    location ~* \.jpg$ {
-        image_filter rotate 180;
         root /var/www/task3/image1/;
     }
 
 
     location /image2{
-        rewrite ^/image2$ /image1.png break;
+        rewrite ^/image2$ /image1.png last;
+        location ~* \.jpg$ {
+                image_filter rotate 180;
+        }
         root /var/www/task3/image2/;
     }
 
