Add Task11 and Task9 fix

--- a/Task9/nginx/conf_d/main.conf
+++ b/Task9/nginx/conf_d/main.conf
@@ -1,6 +1,5 @@
 server{
-    listen 80;
-    server_name localhost 127.0.0.1;
+    server_name mynginxtrainee.zapto.org;
 
     location /{
         root /var/www/task;
@@ -13,7 +12,7 @@ server{
     }
 
     location /music/{
-        root /var/www/task;  
+        root /var/www/task;
         try_files /music/music.mp3 =404;
         default_type application/octet-stream;
         add_header Content-Disposition 'attachment; filename="music.mp3"';
@@ -42,11 +41,31 @@ server{
 
 
     location /image2{
-        rewrite ^/image2$ /image1.png last;
+        rewrite ^/image2$ /image1.png break;
         location ~* \.jpg$ {
                 image_filter rotate 180;
         }
+
         root /var/www/task/image2/;
     }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/mynginxtrainee.zapto.org/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/mynginxtrainee.zapto.org/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server{
+    if ($host = mynginxtrainee.zapto.org) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name mynginxtrainee.zapto.org;
+    return 404; # managed by Certbot
+
 
 }
