--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ Task8/env/
 Task8/Petr_credentials.csv
 Task8/Trainee_key_dec.pem
 Task8/New_Trainee_key.pem.pub
+Petr_accessKeys.csv
+Petr_credentials.csv
+Task11/terraform.tfstate
+Task11/terraform.tfstate.backup
+Task11/.terraform.lock.hcl
+Task11/.terraform
+Trainee_key.pem
